--- a/Projects/DelaunayTriangulation/OpenGLTests/OpenGLTests.vcxproj
+++ b/Projects/DelaunayTriangulation/OpenGLTests/OpenGLTests.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="imgui_widgets.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Points.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
@@ -42,6 +43,7 @@
     <ClInclude Include="imstb_textedit.h" />
     <ClInclude Include="imstb_truetype.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Points.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
