Added Black Boxes

--- a/Projects/DelaunayTriangulation/OpenGLTests/OpenGLTests.vcxproj.filters
+++ b/Projects/DelaunayTriangulation/OpenGLTests/OpenGLTests.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="Points.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PlaneSweepTriangulation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RandomizedIncrementalTriangulation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Mesh.h">
@@ -90,6 +96,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Points.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RandomizedIncrementalTriangulation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PlaneSweepTriangulation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
