--- a/Projects/DelaunayTriangulation/OpenGLTests/imgui.ini
+++ b/Projects/DelaunayTriangulation/OpenGLTests/imgui.ini
@@ -4,7 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=339,639
+Pos=438,5
 Size=359,192
+Collapsed=1
+
+[Window][Demo window]
+Pos=388,39
+Size=166,54
+Collapsed=0
+
+[Window][Delaunay Triangulation Interface]
+Pos=430,28
+Size=339,327
 Collapsed=1
 
