--- a/Projects/DelaunayTriangulation/OpenGLTests/OpenGLTests.vcxproj
+++ b/Projects/DelaunayTriangulation/OpenGLTests/OpenGLTests.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Boundary.cpp" />
+    <ClCompile Include="Graph.cpp" />
     <ClCompile Include="imgui.cpp" />
     <ClCompile Include="imgui_demo.cpp" />
     <ClCompile Include="imgui_draw.cpp" />
@@ -32,9 +34,12 @@
     <ClCompile Include="Points.cpp" />
     <ClCompile Include="RandomizedIncrementalTriangulation.cpp" />
     <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="Triples.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Boundary.h" />
+    <ClInclude Include="Graph.h" />
     <ClInclude Include="imconfig.h" />
     <ClInclude Include="imgui.h" />
     <ClInclude Include="imgui_impl_glfw.h" />
@@ -49,6 +54,7 @@
     <ClInclude Include="Points.h" />
     <ClInclude Include="RandomizedIncrementalTriangulation.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="Triples.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
