--- a/Projects/DelaunayTriangulation/OpenGLTests/OpenGLTests.vcxproj.filters
+++ b/Projects/DelaunayTriangulation/OpenGLTests/OpenGLTests.vcxproj.filters
@@ -57,6 +57,15 @@
     <ClCompile Include="RandomizedIncrementalTriangulation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Graph.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Boundary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Triples.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Mesh.h">
@@ -102,6 +111,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PlaneSweepTriangulation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Graph.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Boundary.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Triples.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
